[package]
name = "ntimes"
version = "0.1.1"
authors = ["Scott Newcomer <snewcomer24@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Execute a command N times"
readme = "README.md"
homepage = "https://github.com/snewcomer/ntimes"
repository = "https://github.com/snewcomer/ntimes"
categories = ["command-line-utilities"]

[dependencies]

